--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  - type: web
+  - type: worker
     name: discord-verification-bot
     env: python
     buildCommand: "pip install -r requirements.txt"
